other-vpol/restrict-deprecated-registry/.kyverno-test/resource.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-pod-bad
  namespace: policy-test
  labels:
    app: test
spec:
  containers:
    - name: test
      image: k8s.gcr.io/google-containers/pause:3.2
      imagePullPolicy: Always
      securityContext:  
        allowPrivilegeEscalation: false  
        runAsUser: 1000  
        readOnlyRootFilesystem: true
        runAsNonRoot: true
        capabilities:
          drop: ["ALL"]  
        seccompProfile:
          type: "RuntimeDefault"
---
apiVersion: v1
kind: Pod
metadata:
  name: test-pod-good
  namespace: policy-test
  labels:
    app: test
spec:
  containers:
    - name: test
      image: registry.k8s.io/google-containers/pause:3.2
      imagePullPolicy: Always
      securityContext:  
        allowPrivilegeEscalation: false  
        runAsUser: 1000  
        readOnlyRootFilesystem: true
        runAsNonRoot: true
        capabilities:
          drop: ["ALL"]  
        seccompProfile:
          type: "RuntimeDefault"
