other-vpol/restrict-deprecated-registry/.kyverno-test-exceptions/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: restrict-deprecated-registry-exceptions
policies:
- ../restrict-deprecated-registry.yaml
resources:
- ../.kyverno-test/resource.yaml
exceptions:
- exceptions.yaml
results:
- isValidatingPolicy: true
  kind: Pod
  policy: restrict-deprecated-registry
  resources:
  - policy-test/test-pod-bad
  result: pass
- isValidatingPolicy: true
  kind: Pod
  policy: restrict-deprecated-registry
  resources:
  - policy-test/test-pod-good
  result: pass
